[project]
name = "turnstile-solver"
version = "0.1.0"
description = "Cloudflare Turnstile solver using Camoufox browser automation with FastAPI server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "camoufox[geoip]>=0.4.11",
    "fastapi[standard]>=0.136.1",
    "loguru>=0.7.3",
]
